style.css
*{
    margin: 0;
    padding: 0;
}
body{
    margin: 0;
    padding: 0;
    overflow-x: hidden;
}
.right_align_search{
    position: relative;
    display: flex;
    justify-content: flex-end;
    margin-bottom: 4.2vh;
    margin-left: 46vw;
}
.search_bar{
    background-color: white;
    position: absolute;
    width: fit-content;
    height: auto;
    padding: 1rem;
    border-radius: 1rem;
    display: flex;
    align-items: center;
    justify-content: center;
    
}
.hide_bar_bg{
    background-color: transparent;
}
.navbar_icon{
    width: 2vw;
    transition: width 0.5s ease-in-out;
    cursor: pointer;
}
#cancel_icon{
    min-width: 2vw;
    width: 2vw;
}
.search_container{
    width: 15vw;
    display: flex;
    align-items: center;
    gap: 1em;
    overflow: hidden;
    transition: 0.5s ease-in-out;
}
#search_input{
    width: 12vw;
    border: none;
    outline: none;
    color: black;
    font-family: "Average Sans", serif;
}
#search_input::placeholder{
    color: rgb(47, 201, 17);
}
.hide_container{
    width: 0;
    overflow: hidden;
    pointer-events: none;
    color: black;
}
nav{
    width: 100vw;
    height: 10vh;
    background-color: black;
    display: flex;
    align-items: flex-end;
}
#natgeologo{
    margin: 0 0 1vh 3vw;
    width: 10vw;
}
.navbar_right{
    width: 30vw;
    height: 12vh;
    display: flex;
    align-items: flex-end;
    position: absolute;
    right: 5vw;
    top: 0;
    justify-content: space-between;
}
.navbuttons{
    margin-bottom: 1vh;
    position: relative;
    font-family: georegular;
    font-size: 1.2em;
    list-style-type: none;
    display: flex;
    width: 14vw;
    justify-content: space-between;
}
.navbuttons a{
    text-decoration: none;
    color: white;
}
/* .navbuttons a:hover{
    color: transparent;
}
.navbuttons a::before {
    content: ''; 
    position: absolute;
    top: 0;
    left: -100%; 
    width: 100%;
    height: 100%;
    background: yellow; 
    transition: all 0.3s ease-in-out;
    z-index: 0;
} */

.navbuttons a:hover::before {
    left: 0;
    z-index: -1;
}
#home_search{
    position: absolute;
    right: 42vw;
    top: 10vh;
    text-decoration: none;
    color: white;
}
.select_container{
    display: flex;
    justify-content: center;
    position: relative;
    height: auto;
    text-align: center;
}
#select_box{
    padding: 0 2rem 0 0;
    margin-right: 2vw;
    height: 5vh;
    border-radius: 1em;
    border: none;
    width: 8vw;
    color: black;
    background-color: rgb(204, 255, 0);
    appearance: none;
    text-align: center;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: georegular;
}
.select_icon_container{
    width: 50px;
    height: 100%;
    position: absolute;
    right: 0;
    display: flex;
    align-items: center;
    justify-items: center;
    margin-right: 0.6vw;
}
.select_icon_container{
    font-size: 15px;
}
#menu_carot{
    transition: transform 0.3s ease-in-out;
    pointer-events: none;
}
#menu_carot.rotate{
    transform: rotate(-180deg);
}

/* .nav_explore::after{
    content: '';
    position: absolute;
    top: -2.2vh;
    right: -0.7vw;
    width: 8vw;
    height: 7vh;
    border: 1px white solid;
    border-radius: 2vh;
    pointer-events: none;
} */
 /* .nav_explore{
    background-color: aliceblue;
    position: relative;
}
 .div_explore{
    width: 10vw;
    height: 10vh;
    background-color: #CFBE43;
 }
 .dropdown{
    box-sizing: border-box;
 }
 .selected{
    position: absolute;
    top: 0;
    color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 2px #2a2f3b solid;
    border-radius: 0.5em;
    padding: 1em;
    cursor: pointer;
    transition: background 0.3s;
 }
#div_explore{
    display: flex;
}
#div_explore i{
    color: white;
    margin-left: 1vw;
    
} */



.shows_header{
    height: 90vh;
    width: 100vw;
    background-color: black;
}
#eagle1{
    height: 90vh;
}
.show_details{
    position: absolute;
    width: 40vw;
    height: 50vh;
    right: 8vw;
    top: 30vh;
    display: flex;
    flex-direction: column;
}
.show_details h1{
    text-align: center;
    position: relative;
    font-family: "Luckiest Guy", cursive;
    font-weight: 400;
    color: white;
    letter-spacing: calc(1px + 0.1vw);
    font-size: 4rem;
    margin: 0;
}
.show_details h5{
    text-align: center;
    position: relative;
    font-family: "Space Mono", serif;
    font-weight: 400;
    letter-spacing: 0.5vw;
    font-size: 1.7rem;
    color: white;
}
.show_details h3{
    text-align: center;
    font-size: 2.1rem;
    font-family: "Irish Grover", serif;
    margin-top: 7vh;
    color: #CFBE43;
}
.time_container{
    position: relative;
    margin-top: 3vh;
    width: 90%;
    left: 5%;
    height: 15vh;
    display: flex;
    justify-content: space-between;
}
.time_block{
    display: flex;
    flex-direction: column;
}
.time_block p{
    margin-left: 1.55vw;
    width: 10vw;
    position: absolute;
    line-height: 12vh;
    text-align: center;
    font-size: 3rem;
    color: white;
    font-family: "Space Mono", serif;
    letter-spacing: 3.3vw;
}
.time_number_group{
    display: flex;
    gap: 5px;
}
.time_number{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 1vw;
    height: 4vh;
    padding: 30px;
    background-color: #513434;
    border-radius: 15px;
}
.time_label{
    font-family: "Space Mono", serif;
    text-align: center;
    font-size: 1.5rem;
    color: white;
}
.cloud{
    width: 100vw;
    position: absolute;
    display: flex;
    justify-content: center;
    top: 70vh;
}
.cloud_item{
    width: 50vw;
}



.trending_shows{
    height: auto;
    width: 100vw;
    background: url(resources/Home_Page/Figma\ mesh.png);
    background-repeat: no-repeat;
    background-size: cover;
}
/* ... */

